force-app/main/default/objects/Event_Clone_Setting__mdt/Event_Clone_Setting__mdt.object-meta.xml
<CustomObject>
    <description>This object is introduced to track the events and events related fields</description>
    <label>Event Clone Setting</label>
    <pluralLabel>Event Clone Settings</pluralLabel>
</CustomObject>