force-app/main/default/objects/Event_Clone_Setting__mdt/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <description>This is to track the fields details</description>
    <label>Fields</label>
    <metadataRelationshipControllingField>Event_Clone_Setting__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Event_Clone_Settings</relationshipLabel>
    <relationshipName>Event_Clone_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>