force-app/main/default/objects/Event_Clone_Setting__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>This is to get the object detail</description>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Event_Clone_Settings</relationshipLabel>
    <relationshipName>Event_Clone_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>