force-app/main/default/objects/Event_Clone_Setting__mdt/fields/Values__c.field-meta.xml
<CustomField>
    <fullName>Values__c</fullName>
    <description>This is to track the values of each field related to the object</description>
    <label>Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>